tools/playbooks/istio/kiali/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kiali-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "kiali.code-triarii.com"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: istio-system
spec:
  hosts:
  - "kiali.code-triarii.com"
  gateways:
  - kiali-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: kiali
        port:
          number: 20001
